Use PEP 517 for building if supported (4/10)

--- a/mingw-w64-python-ordered-set/PKGBUILD
+++ b/mingw-w64-python-ordered-set/PKGBUILD
@@ -3,41 +3,35 @@
 _realname=ordered-set
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=4.1.0
-pkgrel=4
+pkgrel=5
 pkgdesc='An OrderedSet is a mutable data structure that is a hybrid of a list and a set(mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/LuminosoInsight/ordered-set'
 msys2_references=(
   'pypi: ordered-set'
 )
-url='https://github.com/LuminosoInsight/ordered-set'
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-flit-core")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=(https://files.pythonhosted.org/packages/source/o/${_realname}/${_realname}-${pkgver}.tar.gz)
+source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
 sha256sums=('694a8e44c87657c59292ede72891eb91d34131f6531463aab3009191c77364a8')
 
-prepare() {
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r ${_realname}-${pkgver} python-build-${MSYSTEM}
-}
-
 build() {
-  msg "Python build for ${MSYSTEM}"  
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
   cd "${srcdir}"/python-build-${MSYSTEM}
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 MIT-LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
