--- a/mingw-w64-python-pluginbase/PKGBUILD
+++ b/mingw-w64-python-pluginbase/PKGBUILD
@@ -4,31 +4,33 @@ _realname=pluginbase
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.0.1
-pkgrel=3
+pkgrel=4
 pkgdesc="Python library that enables the development of flexible plugin systems (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('spdx:BSD-3-Clause')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="http://pluginbase.pocoo.org/"
 msys2_references=(
   'pypi: pluginbase'
 )
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/mitsuhiko/pluginbase/archive/v${pkgver}.tar.gz")
-sha256sums=('bb95fe6a84ec6583e1be399ef6705011262757c69fb99fa24317fcc6e8998ffc')
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('ff6c33a98fce232e9c73841d787a643de574937069f0d18147028d70d7dee287')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/$_realname-$pkgver"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/$_realname-$pkgver"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-   ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/COPYING"
 }
