--- a/mingw-w64-python-nest-asyncio/PKGBUILD
+++ b/mingw-w64-python-nest-asyncio/PKGBUILD
@@ -4,7 +4,7 @@ _realname=nest-asyncio
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.6.0
-pkgrel=2
+pkgrel=3
 pkgdesc='Patch asyncio to allow nested event loops (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,24 +22,21 @@ source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realnam
 sha256sums=('6f172d5449aca15afd6c646851f4e31e02c598d553a667e38cafa997cfec55fe')
 
 prepare() {
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r "nest_asyncio-${pkgver}" "python-build-${MSYSTEM}"
-
   # Set version for setuptools_scm
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
