--- a/mingw-w64-python-oauth2client/PKGBUILD
+++ b/mingw-w64-python-oauth2client/PKGBUILD
@@ -4,7 +4,7 @@ _realname=oauth2client
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=4.1.3
-pkgrel=5
+pkgrel=6
 pkgdesc='A client library for OAuth 2.0 (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,28 +12,30 @@ url="https://github.com/google/oauth2client"
 msys2_references=(
   'pypi: oauth2client'
 )
-license=('Apache')
-depends=("${MINGW_PACKAGE_PREFIX}-python-httplib2" "${MINGW_PACKAGE_PREFIX}-python-pyasn1" "${MINGW_PACKAGE_PREFIX}-python-pyasn1-modules" "${MINGW_PACKAGE_PREFIX}-python-rsa" "${MINGW_PACKAGE_PREFIX}-python-six")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("https://github.com/google/oauth2client/archive/v${pkgver}.tar.gz")
-sha256sums=('65a05310e3f16b930454aed7bed619edca8025ba96324c3e9b57dd508f1a014f')
-
-prepare() {  
-  cd "$srcdir"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+license=('spdx:Apache-2.0')
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-httplib2"
+         "${MINGW_PACKAGE_PREFIX}-python-pyasn1"
+         "${MINGW_PACKAGE_PREFIX}-python-pyasn1-modules"
+         "${MINGW_PACKAGE_PREFIX}-python-rsa"
+         "${MINGW_PACKAGE_PREFIX}-python-six")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('d486741e451287f69568a4d26d70d9acd73a2bbfa275746c535b4209891cccc6')
 
 build() {
-  msg "Python build for ${MSYSTEM}"  
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
