--- a/mingw-w64-python-oauthlib/PKGBUILD
+++ b/mingw-w64-python-oauthlib/PKGBUILD
@@ -4,39 +4,38 @@ _realname=oauthlib
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=3.2.2
-pkgrel=3
+pkgrel=4
 pkgdesc='A generic, spec-compliant, thorough implementation of the OAuth request-signing logic (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/idan/oauthlib"
 msys2_references=(
   'pypi: oauthlib'
   "cpe: cpe:2.3:a:oauthlib_project:oauthlib"
 )
-url="https://github.com/idan/oauthlib"
-license=('BSD')
-depends=("${MINGW_PACKAGE_PREFIX}-python-cryptography")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+license=('spdx:BSD-3-Clause')
+depends=("${MINGW_PACKAGE_PREFIX}-python")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+optdepends=("${MINGW_PACKAGE_PREFIX}-python-cryptography: rsa and signedtoken"
+            "${MINGW_PACKAGE_PREFIX}-python-pyjwt: signedtoken"
+            "${MINGW_PACKAGE_PREFIX}-python-blinker: signals")
 options=('!emptydirs')
-source=("https://files.pythonhosted.org/packages/source/${_realname:0:1}/$_realname/$_realname-$pkgver.tar.gz")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('9859c40929662bec5d64f34d01c99e093149682a3f38915dc0655d5a633dd918')
 
-prepare() {  
-  cd "$srcdir"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
-
 build() {
-  msg "Python build for ${MSYSTEM}"  
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -D -m644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
