Use PEP 517 for building if supported (9/10)

--- a/mingw-w64-python-pynacl/PKGBUILD
+++ b/mingw-w64-python-pynacl/PKGBUILD
@@ -1,13 +1,11 @@
 # Maintainer: Smo <smo@xpra.org>
 
 _realname=pynacl
+_pyname=PyNaCl
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=1.5.0
-pkgrel=5
+pkgrel=6
 pkgdesc="Python binding to the Networking and Cryptography (NaCl) library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,29 +17,31 @@ license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-libsodium"
          "${MINGW_PACKAGE_PREFIX}-python-cffi")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://github.com/pyca/pynacl/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha512sums=('905d3a7ce7f758b31a5d34471d5a0202fd2ba3d904a7ec59a158bcd1ea572fc87e29fc144c733d151cbaa48788c939808bc51d00acc973fe6d190eefdd3bfd59')
+source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
+sha256sums=('8ac7448f09ab85811607bdd21ec2464495ac8b7c66d146bf545b0f08fb9220ba')
 
 build() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-
+  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   #Use system libsodium here
-  SODIUM_INSTALL=system ${MINGW_PREFIX}/bin/python setup.py build
+  SODIUM_INSTALL=system \
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-  ${MINGW_PREFIX}/bin/python setup.py check
+  cd "${srcdir}"/python-build-${MSYSTEM}
+  ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
-  cd "${srcdir}"/${_realname}-${pkgver}
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-${_realname}/COPYING
 }
