--- a/mingw-w64-python-requests-kerberos/PKGBUILD
+++ b/mingw-w64-python-requests-kerberos/PKGBUILD
@@ -4,7 +4,7 @@ _realname=requests-kerberos
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.15.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A kerberos of useful classes and functions to be used with python-requests (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,35 +18,30 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-requests"
          "${MINGW_PACKAGE_PREFIX}-python-winkerberos"
          "${MINGW_PACKAGE_PREFIX}-python-pyspnego")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-mock")
-source=("https://github.com/requests/requests-kerberos/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha512sums=('7ff6e1a366749d96ec5c193f1f945ffa0709d6cf636ddd49f83813b66d2f0a914538f94d8f53b61ec4d674ef22d882fb7565f420c0126ecd9c70ca4ebf690475')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-
-  # Set version for setuptools_scm
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('437512e424413d8113181d696e56694ffa4259eb9a5fc4e803926963864eaf4e')
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   MSYSTEM= ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
