--- a/mingw-w64-python-rfc3986-validator/PKGBUILD
+++ b/mingw-w64-python-rfc3986-validator/PKGBUILD
@@ -4,17 +4,19 @@ _realname=rfc3986-validator
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.1.1
-pkgrel=4
+pkgrel=5
 pkgdesc="Pure python rfc3986 validator (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/naimetti/rfc3986-validator'
 msys2_references=(
   'pypi: rfc3986-validator'
 )
-url='https://github.com/naimetti/rfc3986-validator'
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pytest"
   "${MINGW_PACKAGE_PREFIX}-python-rfc3987"
@@ -25,14 +27,14 @@ source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realna
 sha256sums=('3d44bde7921b3b9ec3ae4e3adca370438eccebc676456449b145d533b240d055'
             '993bd678996e98fad8912416b94e773c257d17f68b5e39794c84428db21ba9d3')
 
-build() {
+prepare() {
   cd "${_realname/-/_}-${pkgver}"
   patch -Np1 -i ../0001-remove-pytest-runner-dep.patch
+}
 
-  cd "${srcdir}"
+build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
-
-  "${MINGW_PREFIX}"/bin/python setup.py build
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
@@ -42,11 +44,11 @@ check() {
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    "${MINGW_PREFIX}"/bin/python setup.py install --prefix="${MINGW_PREFIX}" \
-      --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
