--- a/mingw-w64-python-setuptools-rust/PKGBUILD
+++ b/mingw-w64-python-setuptools-rust/PKGBUILD
@@ -6,15 +6,16 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.10.2
 pkgrel=2
 pkgdesc="Compile and distribute Python extensions written in rust as easily as if they were written in C (mingw-w64)"
+arch=('any')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/PyO3/setuptools-rust'
 msys2_references=(
   'archlinux: python-setuptools-rust'
   'pypi: setuptools-rust'
 )
 license=('spdx:MIT')
-arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 depends=("${MINGW_PACKAGE_PREFIX}-rust"
+         "${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-semantic-version"
          "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -42,5 +43,6 @@ package() {
     python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 "${srcdir}/${_realname/-/_}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  install -Dm644 "${srcdir}/${_realname/-/_}-${pkgver}/LICENSE" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
