--- a/mingw-w64-python-pytest-flake8/PKGBUILD
+++ b/mingw-w64-python-pytest-flake8/PKGBUILD
@@ -4,7 +4,7 @@ _realname=pytest-flake8
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.1.1
-pkgrel=4
+pkgrel=5
 pkgdesc='pytest plugin to check FLAKE8 requirements (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,24 +12,24 @@ url="https://github.com/tholo/pytest-flake8"
 msys2_references=(
   'pypi: pytest-flake8'
 )
-license=('MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
+license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-pytest"
          "${MINGW_PACKAGE_PREFIX}-python-flake8")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("https://github.com/tholo/pytest-flake8/archive/$pkgver.tar.gz")
-sha256sums=('21bfa72f9a0faca2b60b3926f69086094ddad6363ebcaee4824743d97478a16a')
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('ba4f243de3cb4c2486ed9e70752c80dd4b636f7ccb27d4eba763c35ed0cd316e')
 
-prepare() {  
-  cd "$srcdir"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-  sed -i 's/ignore = E128/ignore = E128 W605/' "python-build-${MSYSTEM}/tox.ini"
+prepare() {
+  cd "$srcdir"/"${_realname}-${pkgver}"
+  sed -i 's/ignore = E128/ignore = E128 W605/' tox.ini
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"  
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
@@ -39,9 +39,11 @@ check() {
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
