--- a/mingw-w64-python-qstylizer/PKGBUILD
+++ b/mingw-w64-python-qstylizer/PKGBUILD
@@ -4,48 +4,50 @@ _realname=qstylizer
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
 pkgver=0.2.4
-pkgrel=1
+pkgrel=2
 pkgdesc='Qt stylesheet generation utility for PyQt/PySide (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('spdx:MIT')
 url='https://github.com/blambright/qstylizer'
 msys2_references=(
   'pypi: qstylizer'
 )
+license=('spdx:MIT')
 depends=(
     ${MINGW_PACKAGE_PREFIX}-python
     ${MINGW_PACKAGE_PREFIX}-python-inflection
-    ${MINGW_PACKAGE_PREFIX}-python-jupyter_core
-    ${MINGW_PACKAGE_PREFIX}-python-pyqt5
-    ${MINGW_PACKAGE_PREFIX}-python-pywin32
     ${MINGW_PACKAGE_PREFIX}-python-tinycss2
 )
 makedepends=(
+    ${MINGW_PACKAGE_PREFIX}-python-build
+    ${MINGW_PACKAGE_PREFIX}-python-installer
     ${MINGW_PACKAGE_PREFIX}-python-setuptools
     ${MINGW_PACKAGE_PREFIX}-python-pbr
 )
-source=("https://github.com/blambright/${_realname}/archive/${pkgver}.tar.gz")
-sha256sums=('5ad15eeafdb140af3711531a1468382e3a15d8a416e5b1bcc6bf28693a7c37ee')
+optdepends=(
+    ${MINGW_PACKAGE_PREFIX}-python-pyqt5
+    ${MINGW_PACKAGE_PREFIX}-python-pyside2
+)
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('4880991d912c9837454832e8e2b58d60b66848d8c4a7cf57ed544fd68b91a23a')
 
 prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
+  cd "${_realname}-${pkgver}"
 
   export PBR_VERSION=${pkgver}
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
 }
