--- a/mingw-w64-python-requests-oauthlib/PKGBUILD
+++ b/mingw-w64-python-requests-oauthlib/PKGBUILD
@@ -4,7 +4,7 @@ _realname=requests-oauthlib
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc='"First-class OAuth library support for Requests (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -13,28 +13,23 @@ msys2_references=(
   'pypi: requests-oauthlib'
 )
 license=('spdx:ISC')
-depends=("${MINGW_PACKAGE_PREFIX}-python-oauthlib"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-oauthlib"
          "${MINGW_PACKAGE_PREFIX}-python-requests")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-mock"
               "${MINGW_PACKAGE_PREFIX}-python-requests-mock"
               "${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-pyjwt")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!emptydirs')
-source=("https://github.com/requests/requests-oauthlib/archive/v$pkgver.tar.gz")
-sha256sums=('ef958f83da020629259afd41f793e6d10ef32139ce849ada8a9c3b9d3ef2e56b')
-
-export PBR_VERSION=$pkgver
-
-prepare() {
-  cd "$srcdir"
-  rm -rf python-build-${MSYSTEM}
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('b3dffaebd884d8cd778494369603a9e7b58d29111bf6b41bdc2dcd87203af4e9')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
@@ -43,9 +38,11 @@ check() {
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
